<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Multiplicando</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game">Multiplicando</string>
    <string name="menu">¿Con qué tabla quieres jugar?</string>
    <string name="nivel">Escoge la dificultad</string>
    <string name="SinTiempo">Sin Tiempo</string>
    <string name="Aprendiz">Aprendiz</string>
    <string name="Normal">Normal</string>
    <string name="Reto">Reto</string>
    <string name="Empezar">Empezar</string>
    <string name="title_activity_game_activity2">Multiplicando</string>
    <string name="title_activity_resultado">Puntaje</string>
    <string name="hello_world"></string>
    <string name="banner_catalogo_tablas">ca-app-pub-6455142835794611/9291470280</string>
    <string name="intersticial">ca-app-pub-6455142835794611/8086618689</string>
    <string name="ad_attribution">Ad</string>
    <string name="instruction_multiplayer">Selecciona la respuesta correcta antes que tu oponente</string>
    <string name="play_again">¿Jugar otra vez?</string>
    <string name="win">¡¡¡GANASTE!!!</string>
    <string name="tabla_practice">
        mul x 1 = __\n
        mul x 2 = __\n
        mul x 3 = __\n
        mul x 4 = __\n
        mul x 5 = __\n
        mul x 6 = __\n
        mul x 7 = __\n
        mul x 8 = __\n
        mul x 9 = __\n
        mul x 10 = __\n
    </string>
    <string name="table_title">Tabla del %s</string>
    <string name="listo">¿Listo?</string>
    <string name="result">Tu puntaje es:</string>
    <string name="game_one_name">Juego 1</string>
    <string name="game_two_name">Juego 2</string>
    <string name="game_three_name">Multijugador</string>
    <string name="player_error">Error iniciando el reproductor de YouTube: %s</string>


</resources>
